--- a/veracode.yml
+++ b/veracode.yml
@@ -73,7 +73,7 @@ veracode_iac_secrets_scan:
     target_branch:
       - default_branch
   #If the break_build_policy_findings is set to true, the build will break if the IaC/Secrets scan finds any policy violations.      
-  break_build_policy_findings: true
+  break_build_policy_findings: false
   #If the break_build_on_error is set to true, the build will break if the scan failed to complete, no libraries found or on any other error.
   break_build_on_error: true
   #If the break_build_on_policy_error is set to true, this is the error message that will be displayed if the IaC/Secrets scan fails to complete, no libraries found or on any other error.
